--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "keeper-app",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://madhur6869.github.io/Keeper-App/",
   "dependencies": {
+    "-": "^0.0.1",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.0",
@@ -10,9 +12,11 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "save-dev": "^0.0.1-security",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
@@ -20,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
